# snake-glory-lounge

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  nginx-combined.conf  openapi.yaml  package-lock.json  package.json  pyproject.toml  render.yaml  start.sh  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: config.py  database.py  db_models.py  db_session.py  main.py  models.py  security.py
backend/app/routers/: auth.py  leaderboard.py  spectator.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_leaderboard.py  test_spectator.py
backend/tests_integration/: README.md  test_integration.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/components/auth/: SignupModal.tsx
frontend/src/components/game/: GameControls.tsx  SnakeGame.tsx
frontend/src/components/spectator/: SpectatorMode.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.test.ts  useAuth.ts  useSnakeGame.ts
frontend/src/lib/: gameLogic.test.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: api.test.ts  api.ts
src/: index.css
src/components/: Header.tsx
src/components/auth/: LoginModal.tsx
src/components/game/: GameBoard.tsx
src/components/leaderboard/: Leaderboard.tsx
src/hooks/: useAuth.test.ts
src/lib/: gameLogic.ts
src/services/: api.test.ts  api.ts
src/types/: game.ts
